fixed display flex wrap in form

--- a/root/css/styles.css
+++ b/root/css/styles.css
@@ -176,6 +176,10 @@ code {
     border: none;
 }
 
+.input-fields {
+    padding: 5px;
+}
+
 @media only screen and (max-width: 650px) {
 
     .content {
